--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4181,7 +4181,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-brand {
-  float: left;
+  float: right;
   padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
@@ -4262,8 +4262,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 @media (min-width: 768px) {
   .navbar-nav {
-    float: left;
-    margin: 0;
+    margin: 0 auto;
+    width: 25%;
   }
   .navbar-nav > li {
     float: left;
